Fix layout issue with join requets.

--- a/client/styles/partials/_page.scss
+++ b/client/styles/partials/_page.scss
@@ -469,7 +469,7 @@
     }
 }
 
-#sidebar ul.games {
+ul.join-requests, ul.games {
     @include zero;
     list-style: none;
 
